# django-ninja-crud-api

./: LICENSE  README.md  manage.py  pyproject.toml
main/: admin.py  api.py  models.py  response.py  schema.py
main/migrations/: 0001_initial.py
ninjacrud/: api.py  asgi.py  settings.py  urls.py  wsgi.py
