[tool.poetry]
name = "ninjacrud"
version = "0.1.0"
description = ""
authors = ["Aashish <aashishkumar12376@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-ninja = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
